<resources>
    <string name="app_name">BeachFit</string>
    <string name="username">\u0020Username</string>
    <string name="password">\u0020Password</string>
    <string name="login">Login</string>
    <string name="newuser">New User?</string>
    <string name="repassword">\u0020Retype Password</string>
    <string name="firstname">\u0020First name</string>
    <string name="lastname">\u0020Last name</string>
    <string name="email">\u0020Email</string>
    <string name="age">\u0020Age</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello, I am a blank fragment!</string>
    <string name="nav_header_desc">User Profile Picture</string>
    <string name="nav_header_title">Currently signed in as:</string>
    <string name="nav_header_subtitle">profile@email.com</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_activity_home">BeachFit</string>
    <string name="home_blank_text">Home Fragment Test String</string>
    <string name="hint_email">\u0020Enter Email</string>
    <string name="hint_password">\u0020Enter Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="desc_beachfit_logo">BeachFit Logo</string>
    <string name="signed_out">Sign In to Begin</string>
    <string name="emailpassword_title_text">Welcome to BeachFit!</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="home">Home</string>
    <string name="fitness">Fitness</string>
    <string name="diet">Diet</string>
    <string name="progress_photos">Progress Photos</string>
    <string name="qr_scanner">SCAN QR CODE</string>
    <string name="goals">Goals</string>
    <string name="rewards">Rewards</string>
    <string name="analytics">Analytics</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="scanqr">Scan QR</string>
    <string name="error_weak_password">Must be 6 characters minimum.</string>
    <string name="error_invalid_email">Invalid email.</string>
    <string name="error_user_exists">Email already used.</string>
    <string name="error_mismatched_passwords">Passwords must match.</string>
    <string name="error_invalid_age">Age must be between 1–99.</string>
    <string name="required_field">Required.</string>
    <string name="log_meal">Log Meal</string>
    <string name="search_food_database">Search Food Database</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="type">Type:</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="level">Level:</string>
    <string name="exercise_level">Exercise Level</string>
    <string name="muscle">Muscle:</string>
    <string name="main_muscle_worked">Main Muscle Worked</string>
    <string name="equipment">Equipment:</string>
    <string name="equipment_needed">Equipment Needed</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="instructions">Instructions</string>
    <string name="watch_video">Watch Video</string>
    <string name="Send_Reset_Email">Send Reset Email</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="search_the_food_database">Search the Food Database</string>
    <string name="food_search_button">Food Search Button</string>
    <string name="thumbnail_photo_for_food_item">thumbnail photo for food item</string>
    <string name="nutrient_information">Nutrient Information</string>
    <string name="food_image">Food Image</string>
    <string name="add_to_my_food_log">Add to My Food Log</string>
    <string name="how_many_servings_did_you_eat">How many servings did you eat?:</string>
    <string name="enter_servings">Enter servings</string>
    <string name="servings_consumed">Servings Consumed:</string>
    <string name="date_of_meal">Date of Meal:</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="step_counter">Step Counter</string>
    <string name="total_cals">total Cals</string>
    <string name="back_to_diet_logs">Back to Diet Logs</string>
    <string name="mmmm_dd_yyyy">MMMM DD, YYYY</string>
    <string name="food">Food</string>
    <string name="cals_serving">Cals/Serving</string>
    <string name="eaten">Eaten</string>
    <string name="total_calories">Total Calories</string>
    <string name="_0">0</string>
    <string name="food_name">Food Name</string>
    <string name="total_calories_for_this_day">Total Calories for this Day:</string>
    <string name="statistics">Statistics</string>
    <string name="add_to_fitness_log">Add to Fitness Log</string>
    <string name="repetitions">Repetitions:</string>
    <string name="enter_repetitions">Enter repetitions</string>
    <string name="sets">Sets:</string>
    <string name="enter_sets">Enter sets</string>
    <string name="weight">Weight:</string>
    <string name="enter_weight">Enter weight</string>
    <string name="distance">Distance</string>
    <string name="enter_distance">Enter distance</string>
    <string name="duration">Duration:</string>
    <string name="enter_duration">Enter duration</string>
    <string name="lbs">lbs</string>
    <string name="minutes">minutes</string>
    <string name="miles">miles</string>
    <string name="contact_us_send_any_questions_and_concerns_to_beachfit_firebase_app_com">Contact Us! Send Any Questions and Concerns to beachfit@firebase.app.com</string>
    <string name="goalName">Name:</string>
    <string name="nameofgoal">Enter Name of Goal</string>
    <string name="dateofgoal">Date of Goal</string>
    <string name="nameofreward">Name:</string>
    <string name="rewardname">Enter Name of Reward</string>
    <string name="dateofreward">Date of Reward</string>
    <string name="num_hint">####</string>
    <string name="exercise_label">Exercise</string>
    <string name="name_edit">Name</string>
    <string name="points_value">Points Value</string>
    <string name="goalnamepage">Goal Name</string>
    <string name="exname">Exercise Name</string>
    <string name="points_values">Points Value:</string>
    <string name="status">Status:</string>
    <string name="complete_exclamation">Complete!</string>
    <string name="back">BACK</string>
    <string name="exercise2">Exercise:</string>
    <string name="exercise">Exercise</string>
</resources>
