<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/foodNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/food_name" />

    <TextView
        android:id="@+id/servingsConsumedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:text="@string/servings_consumed" />

    <TextView
        android:id="@+id/totalCaloriesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:text="@string/total_cals"
        />

</LinearLayout>

