<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nutrientsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:weightSum="10"
    android:visibility="visible">

    <TextView
        android:id="@+id/foodTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/food_name"
        android:gravity="center"
        android:layout_weight="2.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:weightSum="2">

        <ImageView
            android:id="@+id/foodImageNutrientView"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/food_image"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/beachfitlogo" />

        <TextView
            android:id="@+id/nutrientInfoView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="monospace"
            android:text="@string/nutrient_information"
            android:padding="15dp"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:layout_gravity="center"
        android:weightSum="2">

        <Button
            android:id="@+id/addToMyFoodLogButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_to_my_food_log"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <Button
            android:id="@+id/backToDietLogsButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/back_to_diet_logs"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>

