<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGoalLog">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/servingSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/goalName"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/goalNameEditText"
            app:layout_constraintEnd_toStartOf="@+id/goalNameEditText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/goalNameEditText" />

        <EditText
            android:id="@+id/goalNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nameofgoal"
            android:inputType="text"
            android:longClickable="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/dateOfGoalEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/servingSizeLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/dateOfMealLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateofgoal"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/dateOfGoalEditText"
            app:layout_constraintEnd_toEndOf="@+id/servingSizeLabel"
            app:layout_constraintTop_toTopOf="@+id/dateOfGoalEditText" />

        <TextView
            android:id="@+id/dateOfGoalEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/editTextBackground"
            android:hint="@string/mm_dd_yyyy"
            android:longClickable="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/goalNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/goalNameEditText" />

        <TextView
            android:id="@+id/exerciseNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_label"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="@id/dateOfMealLabel"
            app:layout_constraintTop_toTopOf="@+id/spinner" />



        <TextView
            android:id="@+id/pointsValNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points_value"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/pointsValNameEditText"
            app:layout_constraintEnd_toEndOf="@id/exerciseNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/exerciseNameLabel" />

        <EditText
            android:id="@+id/pointsValNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/num_hint"
            android:inputType="number"
            android:longClickable="false"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/spinner"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/dateOfGoalEditText"
            app:layout_constraintTop_toBottomOf="@id/dateOfGoalEditText"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>